--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,24 @@
         android:required="true" />
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/tfe_pe_app_name"
-        android:roundIcon="@drawable/ic_launcher"
+        android:icon="@drawable/renault"
+        android:label="RenaultApp"
+        android:roundIcon="@drawable/renault"
         android:supportsRtl="true"
         android:theme="@style/Theme.PoseEstimation">
         <activity android:name=".LiveActivity">
+
+        </activity>
+
+        <activity android:name=".LiveActivity2">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".VideoActivity"></activity>
     </application>
 
 </manifest>
